Add responsive handlings

--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -68,10 +68,11 @@ header>div {
 }
 
 header img {
-    height: 40px;
-
+    height: 45px;
 }
-
+header .mobile-nav {
+    display: none;
+}
 header nav menu {
     display: flex;
     justify-content: space-between;
@@ -90,7 +91,7 @@ header nav menu>li>a {
     font-family: "Jura", sans-serif;
     font-weight: 500;
     color: #e0e0e0;
-    font-size: 1.1em;
+    font-size: 1.3em;
 }
 
 header nav menu>li:hover>a {
@@ -115,13 +116,14 @@ nav menu li .dropdown {
     opacity: 0;
     position: absolute;
     padding-left: 1em;
-    top: 5px;
+    top: 10px;
     left: 0;
     display: none;
-    background: #f8f8f8;
+    background: #f0f8ff;
     transition: all .25s linear;
     border-radius: 7px;
     z-index: 10;
+    
 }
 nav menu li:hover>.dropdown,
 nav menu li .dropdown:hover {
@@ -220,9 +222,9 @@ main h2 {
     margin-top: 0;
 }
 
-main section {
+/* main section {
     padding: 3rem 5rem;
-}
+} */
 main section h2 {
     color: #19096f;
 }
@@ -237,6 +239,9 @@ main section h2 {
 }
 
 /* services section */
+main section.services {
+    padding: 3rem 5rem;
+}
 main section.services .service {
     display: flex;
     flex-direction: column-reverse;
@@ -248,8 +253,8 @@ main section.services .service {
 main section.services .service>div {
     display: inline-block;
     background-color: #f4c603;
-    width: 8em;
-    height: 8em;
+    width: 10em;
+    height: 10em;
     border-radius: 50%;
     position: relative;
     margin: 0 auto;
@@ -263,14 +268,14 @@ main section.services .service>div i {
 }
 
 main section.services .service>div i.sev-icon {
-    font-size: 4em;
+    font-size: 5em;
     transform: translate(-50%, -50%);
 }
 
 main section.services .service>div i.focus {
     display: none;
     opacity: 0;
-    font-size: 2em;
+    font-size: 3em;
     transform: translate(-50%, -70%);
 }
 main section.services .service:nth-child(2)>div i.focus {
@@ -283,7 +288,8 @@ main section.services .service>div span {
     color: #fff;
     position: absolute;
     bottom: 25%;
-    left: 20%
+    left: 25%;
+    font-size: 1.1em;
 }
 main section.services .service:nth-child(2)>div span {
     bottom: 20%;
@@ -298,7 +304,6 @@ main section.services .service>div:hover i.focus {
     opacity: 1;
     transition: all .3s ease-in;
 }
-
 main section.services .service>div:hover span {
     display: inline;
     opacity: 1;
@@ -350,6 +355,7 @@ main section.services .service:nth-child(3).fade-up {
 /* products section */
 main section.products {
     background-color: #f3f3f3;
+    padding: 3rem 5rem;
 }
 
 /* cards */
@@ -419,7 +425,7 @@ main section.products {
 */
 .subpage main section.about {
     width: 960px;
-    margin: 0 auto;
+    margin: 3rem auto;
     display: grid;
     grid-template-columns: 50% 50%;
 }
@@ -452,9 +458,9 @@ main section.products {
 * products page 
 */
 .subpage main section.product {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
     padding-bottom: 0;
+    padding: 2rem;
 }
 .subpage main section.product>div:nth-child(1) {
     order: 2;
@@ -501,7 +507,7 @@ main section.products {
     color: #fff;
     font-weight: 500;
     cursor: pointer;
-    border-color: #efefef;
+    border: 2px solid #efefef;
 }
 .add-btn:hover {
     opacity: .8;
@@ -527,6 +533,9 @@ main section.products {
 /* 
 * contact page
 */
+.subpage main section.contact {
+    padding: 2rem;
+}
 .contact-form {
     margin-left: auto;
     margin-right: auto;
@@ -540,6 +549,9 @@ main section.products {
     width: 100%;
     display: flex;
     align-items: center;
+}
+.form-item input:nth-of-type(2) {
+    display: none;
 }
 .label {
     width: 100%;
@@ -584,7 +596,7 @@ main section.products {
     font-weight: bold;
     font-size: 1.2em;
     cursor: pointer;
-    border-color: #efefef;
+    border: 2px solid #e6e5e5;
 }
 .form-btn:hover {
     opacity: .8;
@@ -635,4 +647,283 @@ footer .icons ul li:last-child {
 footer .icons ul li a {
     font-size: 1em;
     color: #ffffe5;
+}
+
+/* 
+*  responsive 
+*/
+@media screen and (max-width: 1355px) {
+    /* home page */
+    .home .masthead {
+        padding: 3rem;
+    }
+    /* services section */
+    main section.services .service>div {
+        width: 8em;
+        height: 8em;
+    }
+    main section.services .service>div i.sev-icon {
+        font-size: 4em;
+    }
+    main section.services .service>div i.focus {
+        font-size: 2em;
+    }
+    main section.services .service>div span {
+        left: 20%;
+        font-size: 1em;
+    }
+}
+@media screen and (max-width: 1024px) {
+    /* home page */
+    main section.services h2 {
+        margin-top: 2rem;
+    }
+    .home main section>div {
+        padding: 0;
+    }
+    /* about page */
+    .subpage main section.about {
+        width: 900px;
+    }
+
+    /* products page */
+    .subpage main section.product>div:nth-child(2) {
+        padding-left: 0;
+    }
+}
+
+@media screen and (max-width: 975px) {
+    /* main common */
+    main section {
+        padding: 1rem;
+    }
+    /* home page */
+    main section.products {
+        padding: 1rem;
+    }
+    .card-row {
+        grid-gap: 1rem;
+        text-align: center;
+    }
+    /* about page */
+    .subpage main section.about {
+        display: block;
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    /* Mobile Nav */
+    .desktop-nav {
+        display: none;
+    }
+    header nav menu>li>a {
+        border-bottom: #ddd solid 1px;
+    }
+    header nav menu>li:nth-child(3):hover>a {
+        border-bottom: #f4c603 solid 2px;
+    }
+    header .mobile-nav {
+        display: flex;
+        align-items: center;
+    }
+    .mobile-nav div:nth-child(1) {
+        flex-grow: 1;
+    }
+    .mobile-nav div:nth-child(1) a img {
+        height: 50px;
+    }
+    .mobile-nav input {
+        display: none;
+    }
+    .mobile-nav input+label {
+        position: fixed;
+        top: 30px;
+        right: 40px;
+        height: 20px;
+        width: 25px;
+        z-index: 5;
+    }
+    .mobile-nav input+label span {
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 50%;
+        left: 0;
+        display: block;
+        transition: .5s;
+        background-color: #0e0e0e;
+    }
+    .mobile-nav input+label span:first-child {
+        top: 3px;
+    }
+    .mobile-nav input+label span:last-child {
+        top: 16px;
+    }
+    .mobile-nav label:hover {
+        cursor: pointer;
+    }
+    .mobile-nav input:checked+label span {
+        opacity: 0;
+        top: 50%;
+        color: #0e0e0e;
+    }
+    .mobile-nav input:checked+label span:first-child {
+        opacity: 1;
+        transform: rotate(45deg);
+    }
+    .mobile-nav input:checked+label span:last-child {
+        opacity: 1;
+        transform: rotate(-45deg);
+    }
+    .mobile-nav input~nav {
+        background: #fff;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 3;
+        transition: .5s;
+        transition-delay: .5s;
+        overflow: hidden;
+        padding: 15px;
+    }
+    .mobile-nav input~nav>menu {
+        text-align: center;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        right: 20%;
+        list-style: none;
+        flex-direction: column;
+    }
+    .mobile-nav input~nav>menu>li {
+        opacity: 0;
+    }
+    .mobile-nav input~nav>menu>li>a {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #0e0e0e;
+        font-weight: bold;
+        display: block;
+        padding: 30px;
+    }
+    .mobile-nav input~nav>menu>li>a:hover {
+        color: #f4c603;
+    }
+    .mobile-nav input:checked~nav {
+        height: 100%;
+        transition-delay: 0s;
+    }
+    .mobile-nav input:checked~nav>menu>li {
+        opacity: 1;
+        transition-delay: .25s;
+    }
+
+    /* masthead */
+    .subpage .masthead {
+        padding: 120px 0 36px;
+    }
+
+    /* home services section */
+    main section.services {
+        padding: 1rem 0;
+    }
+    /* home products section */
+    .home main section.products {
+        padding: 2rem 6rem 3rem;
+    }
+    .home main section.products>div {
+        display: block;
+    }
+    .home main section.products>div h4 {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+    .card-row>div {
+        padding-bottom: 1rem;
+        margin-bottom: 2rem;
+    }
+    .card-row>div:last-child {
+        margin-bottom: 0;
+    }
+
+    /* about page */
+    .subpage main section.about {
+        margin-top: 1rem;
+    }
+    .subpage main section.about>div:nth-child(1)>div {
+        padding: 1rem;
+    }
+
+    /* products page */
+    .subpage main section.product {
+        flex-direction: column;
+    }
+    .subpage main section.product>div:nth-child(2) {
+        padding: 0;
+    }
+    .add-btn {
+        margin: 0 auto;
+    }
+
+    /* contact page */
+    .form-item {
+        display: block;
+        border-bottom: 0;
+    }
+    .form-item input:nth-of-type(1) {
+        display: none;
+    }
+    .form-item input:nth-of-type(2) {
+        display: block;
+    }
+    section.contact .form-item p.label {
+        display: none;
+    }
+    .form-base {
+        max-width: initial;
+        margin-left: 0;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width:600px) {
+    /* home page */
+    main section.services>div {
+        display: block;
+    }
+    main section.services .service>div {
+        width: 8em;
+        height: 8em;
+    }
+    main section.services .service>div i.sev-icon {
+        font-size: 4em;
+    }
+    main section.services .service>div i.focus {
+        font-size: 2em;
+    }
+    main section.services .service>div span {
+        left: 20%;
+        font-size: 1em;
+    }
+
+}
+
+@media screen and (max-width:500px) {
+    /* home page */
+    .home main section.products {
+        padding: 2rem;
+    }
+    .home main section.products>div h4 {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+    .card-row>div {
+        padding-bottom: 1rem;
+        margin-bottom: 2rem;
+    }
+    .card-row>div:last-child {
+        margin-bottom: 0;
+    }
 }
