--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -11,7 +11,6 @@ body {
 
 h1 {
     font-family: "Russo One", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
 }
@@ -40,7 +39,6 @@ textarea,
 button,
 div {
     font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     text-decoration: none;
@@ -123,7 +121,7 @@ nav menu li .dropdown {
     transition: all .25s linear;
     border-radius: 7px;
     z-index: 10;
-    
+
 }
 nav menu li:hover>.dropdown,
 nav menu li .dropdown:hover {
@@ -222,9 +220,6 @@ main h2 {
     margin-top: 0;
 }
 
-/* main section {
-    padding: 3rem 5rem;
-} */
 main section h2 {
     color: #19096f;
 }
@@ -513,7 +508,7 @@ main section.products {
     opacity: .8;
 }
 .subpage main section.product+section {
-    padding-top: 1rem;
+    padding: 2rem;
     display: flex;
     justify-content: space-between;
 }
@@ -621,7 +616,6 @@ footer h3 {
     margin: 0 0 .5rem;
     letter-spacing: 1px;
     font-family: "Dosis", sans-serif;
-    font-optical-sizing: auto;
 }
 
 footer p {
